# id-generator

./: .gitignore  README.md
.github/workflows/: rust.yml
id_generator_service/: .gitignore  Cargo.toml  config.yaml.example
id_generator_service/src/: error.rs  main.rs
id_generator_service/src/config/: mod.rs  settings.rs
id_generator_service/src/generator/: mod.rs  nanoid.rs  snowflake.rs  ulid.rs
id_generator_service/src/server/: http.rs  mod.rs  state.rs
id_generator_service/src/utils/: mod.rs  time.rs
